# PaperTrail-API

./: LICENSE  README.md  pyproject.toml
papertrail/: papertrail.py
papertrail/doc_render/: __init__.py  doc_render.py  jinja.py  tectonic.py  template_render.py
papertrail/docs/jinja/: hello.jinja2
tests/: test_doc_render.py  test_template_render.py
