[project]
name = "papertrail-api"
version = "0.1.0"
license = "MIT"
requires-python = ">= 3.13"

description = """PaperTrail is a free and open-source tool designed to help you craft professional,
                customizable resumes with ease. Whether you're a software developer, designer, data scientist,
                or anything in between, PaperTrail simplifies the process of generating clean, consistent, and beautifully
                formatted resumes—without the repetitive formatting struggles."""
authors = [
    {name = "Luis Carlos Quesada", email = "luiscarlosquesada@gmail.com"}
]

dependencies = [
"pydantic>=2.11.3",
"jinja2>=3.1.6",
"fastapi>=0.115.12",
"uvicorn>=0.34.0"
]

